Initial addition of PSEPs archive

--- a/index.html
+++ b/index.html
@@ -25,16 +25,32 @@
 
             <h2>Modules</h2>
 
-            <table class="contentstable" align="center"><tbody><tr>
-                <td width="50%">
-                <p class="biglink"><a class="biglink" href="docs/pyside/index.html">PySide</a><br>
-                    <span class="linkdescr">Python bindings reference.</span></p>
-                </td>
-                <td width="50%">
-                <p class="biglink"><a class="biglink" href="docs/shiboken/index.html">Shiboken</a><br>
-                    <span class="linkdescr">tool used to generate PySide.</span></p>
-                </td></tr>
-            </tbody></table>
+            <table class="contentstable" align="center">
+                <tbody>
+                    <tr>
+                        <td width="50%">
+                            <p class="biglink">
+                                <a class="biglink" href="docs/pyside/index.html">PySide</a><br>
+                                <span class="linkdescr">Python bindings reference.</span>
+                            </p>
+                        </td>
+                        <td width="50%">
+                            <p class="biglink">
+                                <a class="biglink" href="docs/shiboken/index.html">Shiboken</a><br>
+                                <span class="linkdescr">tool used to generate PySide.</span>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td width="50%">
+                            <p class="biglink">
+                                <a class="biglink" href="docs/pseps/index.html">PSEPs</a><br>
+                                <span class="linkdescr">PSEP (PySide Enhancement Proposal) archive.</span>
+                            </p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
             </div>
           </div>
         </div>
